--- a/Dockerfile-braintree
+++ b/Dockerfile-braintree
@@ -1,4 +1,4 @@
-FROM node:15-alpine as build
+FROM proxy.containers.internal/library/node:15-alpine as build
 
 ARG VERSION=1.12.4
 
@@ -20,7 +20,7 @@ RUN yarn install
 RUN cp /opt/vue-storefront-api/config/default.json /opt/vue-storefront-api/config/local.json \
     && yarn build
 
-FROM node:15-alpine
+FROM proxy.containers.internal/library/node:15-alpine
 
 ENV ELASTICSEARCH_API_VERSION=7.1
 
